prusti-tests/tests/verify/fail/floats/is_nan_f64.rs
fn main() {    
    let x:f64 = 0.99;
    assert!(x.is_nan()); //~ ERROR: the asserted expression might not hold
}
